<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress" />

    <!-- CheckBox pour mémoriser l'e-mail -->

    <!-- CheckBox pour mémoriser le mot de passe -->

    <CheckBox
        android:id="@+id/checkBoxRememberEmail"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remember_email_text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBoxRememberPassword"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remember_password_text" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/buttonRegisterMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="redirectToRegisterActivity"
        android:text="@string/save" />

</LinearLayout>
