<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DejeunerActivity">

    <TextView
        android:id="@+id/textTitleD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dejeunerTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editDateD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dejeunerDate"
        android:inputType="date"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editMontantD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dejeunerMontant"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editNomSocieteD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dejeunerNomSociete"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btnSaveD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveD"
        android:layout_marginTop="16dp"/>
</LinearLayout>